--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <div class="buttons">
             <a href="tel:+19413631262" class="button call-now">Call Now</a>
-            <a href="#" class="button send-message">Send Message</a>
+            <a href="#contact" class="button send-message">Send Message</a>
           </div>
         </div>
         <div class="hero-image-wrapper">
