--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar section-content">
       <a href="#" class="nav-logo">
-        <h2 class="logo-text"><img src="images/logo.png" alt="Pooped Scoop Logo"> <br>CALL or TEXT 941-363-1262</h2>
+        <h2 class="logo-text"><img src="images/logonone.png" alt="Pooped Scoop Logo"> <br>CALL or TEXT 941-363-1262</h2>
       </a>
       <ul class="nav-menu">
         <button id="menu-close-button" class="fas fa-times"></button>
