--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="about-details">
           <h2 class="section-title">About</h2>
           <p class="text">At Pooped Scoop, we provide reliable, affordable dog poop removal services for residential and
-            commercial properties. Based in <b>Ellenton</b>, we’re dedicated to keeping your yard clean, safe, and
+            commercial properties. Based in <b>Englewood</b>, we’re dedicated to keeping your yard clean, safe, and
             odor-free —
             so you can enjoy your outdoor space without the mess. Whether you need weekly poop scooping, one-time
             cleanups, or pet waste station servicing, we’ve got you covered. Trust a local, professional poop scooper
