Location in Contact Changed

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <ul class="contact-info-list">
           <li class="contact-info">
             <i class="fa-solid fa-location-crosshairs"></i>
-            <p>Ellenton, Florida</p>
+            <p>Englewood, Florida</p>
           </li>
           <li class="contact-info">
             <i class="fa-regular fa-envelope"></i>
