Paused Manatee County routes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="title">Southwest Florida's Best Pooper Scooper</h2>
           <h3 class="subtitle">You deserve a clean yard!</h3>
           <p class="description">Welcome to Pooped Scoop, the #1 Pet Waste Removal in Southwest Florida. Servicing
-            Charlotte County, Sarasota County and Manatee County.
+            Charlotte County and Sarasota County.
           </p>
 
           <div class="buttons">
@@ -175,15 +175,15 @@
       <h2 class="section-title">Locations</h2>
       <div class="section-content">
         <ul class="locations-list">
-          <li class="locations-item">
+          <!-- <li class="locations-item">
             <img src="images/manatee.jpg" alt="Manatee County Service Area for Poop Scooping" class="locations-image">
             <h3 class="name">Manatee County, Florida</h3>
             <p class="text">We offer pet waste removal services in Bradenton, Palmetto, Ellenton, Parrish & MORE!</p>
-          </li>
+          </li> -->
           <li class="locations-item">
             <img src="images/sarasota.jpg" alt="Sarasota County Service Area for Poop Scooping" class="locations-image">
             <h3 class="name">Sarasota County, Florida</h3>
-            <p class="text">We offer poop scooping services in Sarasota, Nokomis, Venice, North Port Englewood & MORE!
+            <p class="text">We offer poop scooping services in Sarasota, Nokomis, Venice, North Port, Englewood & MORE!
             </p>
           </li>
           <li class="locations-item">
