--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pooped Scoop</title>
+  <title>Pooped Scoop - Best Pooper Scooper and Pet Sitter</title>
   <!-- Linking Font Awesome For Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <!-- Image For Favicon -->
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar section-content">
       <a href="#" class="nav-logo">
-        <h2 class="logo-text"><img src="images/logonone.png" alt="Pooped Scoop Logo"> <br>CALL or TEXT 941-363-1262</h2>
+        <h1 class="logo-text"><img src="images/logonone.png" alt="Pooped Scoop Logo"><br>Poop Scooper 941-363-1262</h1>
       </a>
       <ul class="nav-menu">
         <button id="menu-close-button" class="fas fa-times"></button>
@@ -53,10 +53,9 @@
     <section class="hero-section">
       <div class="section-content">
         <div class="hero-details">
-          <h2 class="title">Southwest Florida's Best Pooper Scooper</h2>
-          <h3 class="subtitle">You deserve a clean yard!</h3>
-          <p class="description">Welcome to Pooped Scoop, the #1 Pet Waste Removal in Southwest Florida. Servicing
-            Charlotte County and Sarasota County.
+          <h1 class="title">Best Pooper Scooper in Englewood, Florida</h1>
+          <h2 class="subtitle">Pet Sitting OFFERED</h2>
+          <p class="description">Welcome to Pooped Scoop, the #1 Pet Waste Removal and Pet Sitting Service in Southwest Florida. We currently service Charlotte County, Florida and Sarasota County, Florida.
           </p>
 
           <div class="buttons">
@@ -79,7 +78,7 @@
         <div class="about-details">
           <h2 class="section-title">About</h2>
           <p class="text">At Pooped Scoop, we provide reliable, affordable dog poop removal services for residential and
-            commercial properties. Based in <b>Englewood</b>, we’re dedicated to keeping your yard clean, safe, and
+            commercial properties. Based in <b>Englewood, Florida</b> we’re dedicated to keeping your yard clean, safe, and
             odor-free —
             so you can enjoy your outdoor space without the mess. Whether you need weekly poop scooping, one-time
             cleanups, or pet waste station servicing, we’ve got you covered. Trust a local, professional poop scooper
@@ -128,7 +127,7 @@
           </li>
           <li class="service-item">
             <img src="images/doggorun.png" alt="Running Dog" class="service-image">
-            <h3 class="name">Additional Services</h3>
+            <h3 class="name">Pet Sitting</h3>
             <p class="text">We offer more than just cleanup! Count on us for dependable dog walking, pet sitting, food
               and water refills, and even medication administration. Whether you’re at work, on vacation, or just need
               an extra hand, we’re here to give your pets the love and care they deserve — right in the comfort of their
@@ -203,7 +202,7 @@
         <ul class="contact-info-list">
           <li class="contact-info">
             <i class="fa-solid fa-location-crosshairs"></i>
-            <p>Englewood, Florida</p>
+            <p>69 W Bay St. #101<br>Englewood, Florida<br>34223</p>
           </li>
           <li class="contact-info">
             <i class="fa-regular fa-envelope"></i>
