--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <header>
     <nav class="navbar section-content">
-      <a href="#" class="nav-logo">
-        <h1 class="logo-text"><img src="images/logonone.png" alt="Pooped Scoop Logo"><br>Poop Scooper 941-363-1262</h1>
+      <a href="tel:+19413631262" class="nav-logo">
+        <h1 class="logo-text"><img src="images/logonone.png" alt="Pooped Scoop Logo"><br>FREE Quote 941-363-1262</h1>
       </a>
       <ul class="nav-menu">
         <button id="menu-close-button" class="fas fa-times"></button>
@@ -84,9 +84,9 @@
             cleanups, or pet waste station servicing, we’ve got you covered. Trust a local, professional poop scooper
             who truly cares about your pets and your property!</p>
           <div class="social-link-list">
-            <a href="https://www.facebook.com/profile.php?id=61574166817749" target="_blank" class="social-link"><i
+            <a href="https://www.facebook.com/poopedscoop" target="_blank" class="social-link"><i
                 class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/thepoopedscoop/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
           </div>
         </div>
       </div>
@@ -202,7 +202,7 @@
         <ul class="contact-info-list">
           <li class="contact-info">
             <i class="fa-solid fa-location-crosshairs"></i>
-            <p>69 W Bay St. #101<br>Englewood, Florida<br>34223</p>
+            <p>Englewood, Florida<br>34223</p>
           </li>
           <li class="contact-info">
             <i class="fa-regular fa-envelope"></i>
@@ -232,9 +232,9 @@
         <p class="copyright-text">© 2025 Pooped Scoop</p>
 
         <div class="social-link-list">
-          <a href="https://www.facebook.com/profile.php?id=61574166817749" target="_blank" class="social-link"><i
+          <a href="https://www.facebook.com/poopedscoop" target="_blank" class="social-link"><i
               class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.instagram.com/thepoopedscoop/" class="social-link"><i class="fa-brands fa-instagram"></i></a>
         </div>
 
         <p class="footer-text">made by <a href="https://www.tylergreen.codes" class="footer-link" target="_blank"><i
