--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
           <input type="hidden" name="access_key" value="490efe4e-afb4-4684-a389-c248930c1ec8">
           <input type="text" name="name" placeholder="Your Name" class="form-input" required>
           <input type="email" name="email" placeholder="Your Email" class="form-input" required>
+          <input type="tel" name="phone" placeholder="Your Phone Number" class="form-input" required>
           <textarea name="message" placeholder="Your Message" class="form-input" required></textarea>
           <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
           <button class="submit-button">Submit</button>
